--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 </head>
 
 <body>
-    <div class="content">
-        <div class="container port">
+    <main class="content">
+        <section class="container port">
             <div class="avatar">
-                <img src="image/avatar-jessica.jpeg" alt="">
+                <img src="image/avatar-jessica.jpeg" alt="profile_image">
             </div>
             <div class="qualifier">
-                <div class="name">Jessica Randall</div>
+                <h1 class="name">Jessica Randall</h1>
                 <div class="address">London, United Kingdom</div>
                 <p>"Front-end developer and avid reader"</p>
             </div>
@@ -31,8 +31,12 @@
 
             </div>
 
-        </div>
-    </div>
+        </section>
+    </main>
+    <footer class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="https://www.frontendmentor.io/profile/HanaaAli10" target="_blank">Hanaa Ali</a>.
+    </footer>
 </body>
 
 </html>
